apps/llama-api/deployment/llama-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama-api
  labels:
    name: llama-api
