apps/llama-api/deployment/llama-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llama-api
  name: llama-api
  namespace: llama-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-api
  strategy: {}
  template:
    metadata:
      labels:
        app: llama-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - rigr720xd
      containers:
        - image: registry.local:32000/llama-api:latest
          name: llama-api-0
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
