apps/llama-api/deployment/llama-api-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  annotations: 
       nginx.ingress.kubernetes.io/rewrite-target: / 
  name: llama-api 
  namespace: llama-api 
spec: 
  ingressClassName: public 
  rules: 
  - host: llama-api.local 
    http: 
      paths: 
      - backend: 
          service: 
            name: llama-api 
            port: 
              number: 8080 
        path: / 
        pathType: Prefix
